# meta-hackathon

./: .gitignore  inference.py  inference_example.py  requirements.txt
.github/workflows/: deploy.yml
docs/: design.md  dir.md  grading_system.md  notes.md  openenv_guide.md  reference.md  repos.md
refactor_env/: README.md  __init__.py  client.py  models.py  pyproject.toml
refactor_env/environment/core/: environment.py  exceptions.py  executor.py  metrics.py  protocols.py  reward.py  sandbox.py
refactor_env/environment/graders/: __init__.py  base_grader.py  complexity_grader.py  coverage_grader.py  duplication_grader.py  lint_grader.py  production_grader.py  structure_grader.py  style_grader.py  symbol_grader.py
refactor_env/environment/graders/utils/: __init__.py  ast_utils.py  complexity_analysis.py  dep_graph.py  git_utils.py  metric_cache.py  subprocess_runner.py
refactor_env/environment/registry/: __init__.py  invariant.py  loader.py  scenario.py
refactor_env/server/: Dockerfile  __init__.py  app.py  refactor_environment.py
refactor_env/tasks/lint_cleanup/: scenario.yaml
refactor_env/tasks/lint_cleanup/repo/: utils.py
refactoring_environment/: Dockerfile  README.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
refactoring_environment/environment/: __init__.py
refactoring_environment/environment/graders/: __init__.py  registry.py
refactoring_environment/environment/graders/analysis/: __init__.py  ast_utils.py  complexity_analysis.py  dep_graph.py
refactoring_environment/environment/graders/types/: __init__.py  complexity_grader.py  coverage_grader.py  lint_grader.py  mock_grader.py  style_grader.py  symbol_grader.py
refactoring_environment/environment/graders/types/base/: __init__.py  grade_result.py
refactoring_environment/environment/registry/: __init__.py  loader.py
refactoring_environment/environment/registry/scenario/: __init__.py  invariant.py
refactoring_environment/environment/sandbox/: __init__.py  files.py  filters.py  git.py  runner.py
refactoring_environment/models/: actions.py  grader_spec.py  observations.py
refactoring_environment/models_internal/: __init__.py  grader_spec.py  primitives.py
refactoring_environment/server/: __init__.py  app.py
refactoring_environment/tasks/lint-cleanup/: scenario.yaml
refactoring_environment/tasks/lint-cleanup/repo/tests/: test_utils.py
refactoring_environment/tasks/module-decompose/: scenario.yaml
refactoring_environment/tasks/module-decompose/repo/: analysis_module.py
refactoring_environment/tasks/module-decompose/repo/tests/: test_analysis_module.py
refactoring_environment/tasks/style-enforcement/: scenario.yaml
refactoring_environment/tasks/style-enforcement/repo/: data_processor.py
refactoring_environment/tasks/style-enforcement/repo/tests/: test_data_processor.py
refactoring_environment/tests/: test_sandbox.py  test_scenarios.py
refactoring_environment/tests/graders/: __init__.py  test_complexity_grader.py  test_coverage_grader.py  test_grader_dispatcher.py  test_lint_grader.py  test_style_grader.py  test_symbol_grader.py
tests/: test_env_e2e.py
