[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-refactoring-environment"
version = "0.1.0"
description = "Refactoring environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Harshit Sandilya" }
]
dependencies = [
    "openenv-core>=0.2.1",
    "unidiff>=0.7.5",
    "pytest-json-report>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "radon>=6.0.1",
    "pylint>=3.2.0",
]

[project.scripts]
server = "refactoring_environment.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "refactoring_environment",
    "refactoring_environment.environment",
    "refactoring_environment.models_internal",
]

[tool.setuptools.package-dir]
"refactoring_environment"                      = "."
"refactoring_environment.environment"          = "environment"
"refactoring_environment.models_internal"      = "models_internal"